--- a/wp-content/themes/neve-child-theme/style.css
+++ b/wp-content/themes/neve-child-theme/style.css
@@ -5,7 +5,7 @@
  Author:       Trine Bickley, Liv Bryde Nielsen og Michala Søndergaard Nielsen
  Author URI:   http://michalasoendergaard.dk/storyscaping
  Template:     neve
- Version:      1.0.0
+ Version:      1.0.1
  License:      GNU General Public License v2 or later
  License URI:  http://www.gnu.org/licenses/gpl-2.0.html
  Tags:         light, dark, two-columns, right-sidebar, responsive-layout, accessibility-ready
@@ -13,5 +13,7 @@
 */
 
 .elementor-91 .elementor-element.elementor-element-19cd67d7 .elementor-heading-title {
-    color: red !important;
+    color: skyblue!important;
 }
+
+/* test */
