Flipbox background-color ændret

--- a/wp-content/themes/neve-child-theme/style.css
+++ b/wp-content/themes/neve-child-theme/style.css
@@ -19,4 +19,15 @@
     letter-spacing:2px !important;
 }
 
+/*-- ATIL flipbox ---*/
+
+.oxilab-flip-box-back-3 {
+    background-color: #edc691 !important;
+}
+
+/*--- GGB flipbox ---*/
+
+.oxilab-flip-box-back-2 {
+    background-color: #d6e3bf !important;
+}
 
