enqueue font i functions.php + tilføjet i style.css

--- a/wp-content/themes/neve-child-theme/style.css
+++ b/wp-content/themes/neve-child-theme/style.css
@@ -15,7 +15,7 @@
 /*--- "Kogle" logo overskrift ---*/
 
 .site-logo p {
-    font-family:montserrat !important;
+    font-family: 'Montserrat', sans-serif;
     letter-spacing:2px !important;
 }
 
