--- a/wp-content/themes/neve-child-theme/style.css
+++ b/wp-content/themes/neve-child-theme/style.css
@@ -31,3 +31,10 @@
     background-color: #d6e3bf !important;
 }
 
+h1 {
+    font-family: 'Montserrat', sans-serif;
+}
+
+h2 {
+    font-family: 'Montserrat', sans-serif;
+}
