--- a/wp-content/themes/neve-child-theme/style.css
+++ b/wp-content/themes/neve-child-theme/style.css
@@ -20,6 +20,9 @@
 
 }
 
+
+
+
 /* --  overskrifter h1 og h2 --*/
 h1 {
     font-family: 'Montserrat', sans-serif !important;
@@ -33,8 +36,9 @@ h2{
 .elementor-91 .elementor-element.elementor-element-52c6b62b .elementor-heading-title {
     
     font-family: 'Montserrat', sans-serif;
-    
 }
+
+
 
 
 
@@ -53,11 +57,27 @@ h2{
 }
 
 
+
+
 /*-- ATIL flipbox ---*/
 
 .oxilab-flip-box-back-3 {
     background-color: #edc691 !important;
 }
+
+.oxilab-flip-box-back-3-data .oxilab-info {
+    color: #cd7327 !important;
+    text-align: left !important;
+    font-family: 'montserrat'!important;
+}
+
+.oxilab-flip-box-back-3-data .oxilab-heading {
+    color: #cd7327 !important;
+    font-family: 'montserrat'!important;
+}
+
+
+
 
 /*--- GGB flipbox ---*/
 
@@ -65,6 +85,89 @@ h2{
     background-color: #d6e3bf !important;
 }
 
+.oxilab-flip-box-back-2-data .oxilab-info {
+    color: #545a52 !important;
+    text-align: left !important;
+    font-family: 'montserrat' !important;
+  
+}
+
+.oxilab-flip-box-back-2-data .oxilab-heading {
+    color: #545a52 !important;
+    font-family: 'montserrat' !important;
+}
 
 
 
+
+/*--- bæredygtighed flipbox ---*/
+
+.oxilab-flip-box-back-4 {
+    background-color: #e3f3bd !important;
+    font-family:'montserrat'!important;
+}
+
+.oxilab-flip-box-back-4-data .oxilab-heading {
+    color: black !important;
+    font-family:'montserrat'!important;
+}
+
+.oxilab-flip-box-back-4-data .oxilab-info {
+    color: black !important;
+    font-family:'montserrat'!important;
+}
+
+
+
+
+/*--- økologi flipbox ---*/
+
+.oxilab-flip-box-back-5 {
+    background-color: #ecc78e !important;
+}
+
+.oxilab-flip-box-back-5-data .oxilab-heading {
+    color: black !important;
+    font-family:'montserrat'!important;
+}
+
+.oxilab-flip-box-back-5-data .oxilab-info {
+    color: black !important;
+    font-family:'montserrat'!important;
+}
+
+
+
+/*--- lokale råvarer flipbox ---*/
+
+.oxilab-flip-box-back-6 {
+    background-color: #d6e7c0 !important;
+}
+
+.oxilab-flip-box-back-6-data .oxilab-heading {
+    color: black !important;
+    font-family:'montserrat'!important;
+}
+
+.oxilab-flip-box-back-6-data .oxilab-info {
+    color: black !important;
+    font-family:'montserrat'!important;
+}
+
+
+
+/*--- dansk produktion ---*/
+
+.oxilab-flip-box-back-7 {
+    background-color: #ba7532!important;
+}
+
+.oxilab-flip-box-back-7-data .oxilab-heading {
+    color: black !important;
+    font-family:'montserrat'!important;
+}
+
+.oxilab-flip-box-back-7-data .oxilab-info {
+    color: black !important;
+    font-family:'montserrat'!important;
+}
