--- a/wp-content/plugins/someplugin/css/style.css
+++ b/wp-content/plugins/someplugin/css/style.css
@@ -144,28 +144,40 @@ body
 
 /* ikoner */
 
-.someikoner {
- 
-}
-
-.someikoner, #instagram {
-    display: flex;
-    flex-wrap: wrap;
-    
-
-}
-
-.someikoner, #facebook {
+.someikoner    { 
     display: flex;
     flex-wrap: wrap;
     flex: none;
+    justify-content: center;
+    margin-top: 15%;
+    
+}
+
+ #instagram {
+    display: flex;
+    flex-wrap: wrap;
+    width: 15%;
+    height: 15%;
+    margin-left: 15%;
+    margin-right: 15%;
+
+}
+
+ #facebook {
+    display: flex;
+    flex-wrap: wrap;
+    flex: none;
+    width: 15%;
+    height: 15%;
 }
      
 
 
-.someikoner, #linkedin {
+ #linkedin {
     display: flex;
     flex-wrap: wrap;
+    width: 15%;
+    height: 15%;
      
 }
 
